# hovel

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  AGENTS.md  BUILD.bazel  CONTEXT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  OWNERS  README.md  SECURITY.md  Taskfile.yml  context7.json  go.mod  go.sum  go.work.bazel  index.html  lefthook.yml  spec.md
cmd/hovel/: BUILD.bazel  binary_e2e_test.sh  main.go
cmd/hoveld/: BUILD.bazel  main.go  main_test.go
core/: .bazelrc  .golangci.yml  BUILD.bazel  MODULE.bazel  OWNERS  Taskfile.yml  go.mod  go.sum
core/cmd/hovel/: BUILD.bazel  binary_e2e_test.py  main.go
core/cmd/hovel-ui-catalog/: BUILD.bazel  main.go
core/internal/: OWNERS
core/internal/testsupport/: BUILD.bazel  testsupport.go
core/internal/version/: BUILD.bazel
core/schemas/: BUILD.bazel  hovel.module.schema.json  hovel.throw-plan.schema.json  schema_smoke_test.py
core/schemas/fixtures/: event_throw_started.json  module_artifacts.json
core/tools/bzlmod/: external_tools.bzl
core/tools/ci/: job_summary.py  job_summary_test.py
core/tools/lint/: BUILD.bazel  format_rust_workspace.py  format_squatter_c.py  gofmt_workspace.py  golangci_lint_workspace.py  requirements.in  requirements_lock.txt  run_python_check.py  run_ruff.py  run_squatter_clang_tidy.py  run_squatter_complexity.py  run_squatter_cppcheck.py  run_squatter_format_check.py  squatter_clang_tidy.bzl  static_checks.bzl  tools.go
core/tools/release/: BUILD.bazel  build_hovel_wheel.py  upver.py  upver_test.py
core/tools/tests/: check_coverage.py  event_type_fuzz_smoke_test.py  site_smoke_test.py
core/tools/windows_rust/: flags.bzl  stage_llvm_mingw_libs.bzl
demo/: BUILD.bazel  demo_defs.bzl
demo/chains/: mock-survey-exploit.chain.yaml
demo/tapes/: mcp-agent-01-throw.tape  mock-survey-exploit-01-inspect.tape  mock-survey-exploit-02-throw.tape  mock-survey-exploit-03-session-io.tape  mock-survey-exploit-04-session-connect.tape  mock-survey-exploit-cli-02-session-io.tape  mock-survey-exploit-cli-03-session-connect.tape  mock-survey-exploit-cli-commands-01-create.tape  mock-survey-exploit-cli-commands-02-config-before.tape  mock-survey-exploit-cli-commands-03-config-apply.tape  mock-survey-exploit-cli-commands-04-save.tape  mock-survey-exploit-cli-commands.tape  mock-survey-exploit-cli.tape  mock-survey-exploit-commands-01-create.tape  mock-survey-exploit-commands-02-config-before.tape  mock-survey-exploit-commands-03-config-apply.tape  mock-survey-exploit-commands-04-save.tape  mock-survey-exploit-commands.tape  mock-survey-exploit.tape  module-package-install-01-link.tape
demo/tapes-docker/: mcp-agent-02-squatter-wine.tape
docs/demo/: BUILD.bazel  demo_defs.bzl
docs/demo/tapes/: mock-survey-exploit-03-session-io.tape  mock-survey-exploit-04-session-connect.tape  mock-survey-exploit-cli-02-session-io.tape  module-package-install-01-link.tape  (+7 more)
docs/site/: .npmrc  BUILD.bazel  README.md  astro.config.mjs  index.html  package.json  pnpm-lock.yaml  report_ui_test.py  version.bzl
examples/python/: BUILD.bazel  hovel-modules.json
internal/testsupport/: BUILD.bazel  testsupport.go
modules/picblobs/: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  Taskfile.yml  hovel-module.yaml  lefthook.yml  nacl_protocol.py  ruff.toml  sourceme
modules/squatter/: BUILD.bazel  C_STYLE_GUIDE.md  README.md
modules/tools/: BUILD.bazel  check_in_repo_modules_test.py  package_examples.py  package_examples_test.py  platform_binary.bzl  release_modules.bzl  stage_examples.py  workspace_module_install_test.py
repo-tools/tasks/: BUILD.bazel  checkout.py  checkout_test.py  configure_bazel_cache.py
schemas/: BUILD.bazel  hovel.chain.schema.json  hovel.event.schema.json  hovel.module.schema.json  hovel.service.schema.json  hovel.throw-plan.schema.json  schema_smoke_test.py
schemas/fixtures/: chain_configured.json  chain_template.json  event_throw_started.json  module_artifacts.json  throw_plan.json
sdk/python/: BUILD.bazel  README.md  build_dist.py  pyproject.toml
spec/: BUILD.bazel  architecture.html  book.toml  chains-runs.html  configuration-distribution.html  domain-model.html  front-ends.html  index.html  introduction.html  mcp-agent.html  milestone-1-tdd-plan.html  module-development.html  module-eternalromance.html  module-go.html  module-ms17-010.html  module-protocol.html  module-python.html  module-rust.html  modules-services.html  operator-workflows.html  providers-artifacts.html  safety.html  squatter-payload-provider.html  testing-roadmap.html  user-guide.html
spec/reference/: descriptors.html
spec/src/: SUMMARY.md  architecture.md  chains-runs.md  configuration-distribution.md  domain-model.md  front-ends.md  introduction.md  milestone-1-tdd-plan.md  modules-services.md  operator-workflows.md  providers-artifacts.md  safety.md  testing-roadmap.md
tools/docs/: BUILD.bazel  check_site_links.py  generate_sdk_api_docs.py  stage_site.py  stage_site.sh
tools/lint/: BUILD.bazel  check_gofmt.sh  check_python.sh  check_squatter_clang_tidy.sh  check_squatter_complexity.sh  check_squatter_cppcheck.sh  check_squatter_format.sh  format_squatter_c.py  format_squatter_c.sh  gofmt_all.sh  gofmt_workspace.py  requirements_lock.txt  run_python_check.py  run_ruff.py  run_squatter_clang_tidy.py  run_squatter_clang_tidy.sh  run_squatter_complexity.py  run_squatter_cppcheck.py  squatter_clang_tidy.bzl  squatter_sources.sh
tools/mdbook/: BUILD.bazel  mdbook.bzl
tools/modules/: BUILD.bazel  check_in_repo_modules_test.py  check_in_repo_modules_test.sh  package_examples.py  package_examples_test.py  release_modules.bzl  stage_examples.py  stage_examples.sh  workspace_module_install_test.py  workspace_module_install_test.sh
tools/testreport/: BUILD.bazel  README.md  lint-report.schema.json  lint_tools.json  lintreport.py  lintreport_test.py  render_report.py  run_lint_report.py  testreport.py  testreport_test.py
tools/windows_rust/: BUILD.bazel  stage_llvm_mingw_libs.py
tools/wine/: BUILD.bazel  wine_run.py  wine_run_test.py
(+1208 files in other folders)
