module(
    name = "hovel_slices",
    version = "0.2.4",
)

bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "rules_nodejs", version = "6.7.5")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.2.0")
bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_shell", version = "0.8.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.26.5",
)
go_sdk.nogo(
    includes = ["@//:__subpackages__"],
    nogo = "//:nilness_nogo",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work.bazel")
use_repo(
    go_deps,
    "com_github_akamensky_argparse",
    "com_github_c_bata_go_prompt",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_glamour",
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_term",
    "com_github_jfjallid_go_smb",
    "com_github_modelcontextprotocol_go_sdk",
    "com_github_pkg_term",
    "in_gopkg_yaml_v3",
    "org_golang_x_sys",
    "org_golang_x_tools",
    "org_modernc_sqlite",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version_from_nvmrc = "//docs/site:.nvmrc")
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(pnpm_version_from = "//docs/site:package.json")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//docs/site:.npmrc",
    pnpm_lock = "//docs/site:pnpm-lock.yaml",
    run_lifecycle_hooks = False,
)
use_repo(npm, "npm")

lint_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
lint_pip.parse(
    hub_name = "lint_pypi",
    python_version = "3.12",
    requirements_lock = "//core/tools/lint:requirements_lock.txt",
)
use_repo(lint_pip, "lint_pypi")

picblobs_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
picblobs_pip.parse(
    hub_name = "picblobs_pip",
    python_version = "3.12",
    requirements_lock = "//modules/picblobs/python:requirements.txt",
)
use_repo(picblobs_pip, "picblobs_pip")

mbed_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
mbed_pip.parse(
    hub_name = "mbed_pip",
    python_version = "3.12",
    requirements_lock = "//modules/picblobs/mbed:requirements.txt",
)
use_repo(mbed_pip, "mbed_pip")

external_tools = use_extension("//core/tools/bzlmod:external_tools.bzl", "external_tools")
external_tools.group(name = "core")
external_tools.group(name = "docs")
external_tools.group(name = "picblobs")
use_repo(
    external_tools,
    "buildifier_linux_amd64",
    "buildifier_linux_arm64",
    "chrome_for_testing_linux_x86_64",
    "dejavu_fonts_ttf",
    "ffmpeg_linux_x86_64",
    "golangci_lint_linux_amd64",
    "llvm_mingw_ucrt_linux_x86_64",
    "ttyd_linux_x86_64",
    "uv_linux_x86_64",
    "vhs_linux_x86_64",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.repository_set(
    name = "rust_linux_x86_64_musl_targets",
    allocator_library = "@rules_rust//rust/private/cc:empty",
    edition = "2021",
    exec_triple = "x86_64-unknown-linux-gnu",
    target_compatible_with = [
        "//platforms:musl",
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-musl",
    versions = ["1.96.1"],
)
rust.toolchain(
    allocator_library = "@rules_rust//rust/private/cc:empty",
    edition = "2021",
    extra_rustc_flags_triples = {
        "aarch64-apple-darwin": [
            "-Clink-arg=-undefined",
            "-Clink-arg=dynamic_lookup",
        ],
    },
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-pc-windows-gnullvm",
        "x86_64-pc-windows-gnullvm",
        "x86_64-unknown-linux-gnu",
    ],
    versions = ["1.96.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

picblobs_toolchains = use_extension("//modules/picblobs/toolchains:repositories.bzl", "picblobs_toolchains")
use_repo(
    picblobs_toolchains,
    "arm_none_eabi",
    "bootlin_aarch64",
    "bootlin_armv5",
    "bootlin_armv7",
    "bootlin_i686",
    "bootlin_mipsbe32",
    "bootlin_mipsel32",
    "bootlin_powerpc",
    "bootlin_ppc64le",
    "bootlin_riscv64",
    "bootlin_s390x",
    "bootlin_sparcv8",
    "bootlin_x86_64",
    "mbed_arm_none_eabi",
    "qemu_arm_static",
    "qemu_user_static",
)

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

local_repository(
    name = "hovel_core",
    path = "core",
)

mingw_toolchain_repo = use_repo_rule("//modules/squatter/bazel:mingw.bzl", "mingw_toolchain_repo")

mingw_toolchain_repo(
    name = "mingw_i686",
    cpu = "x86_32",
    sha256 = "2eb51859f539890133f5d0419b1bd534fb7fb8b522018de838ff1f5c09abf3c2",
    strip_prefix = "mingw-w64-gcc-15.2.0-ucrt-posix-dw2-i686-w64-mingw32-linux-x86_64",
    target = "i686-w64-mingw32",
    urls = ["https://github.com/Vibe-Pwners/windows-toolchains/releases/download/v0.0.1/mingw-w64-gcc-15.2.0-ucrt-posix-dw2-i686-w64-mingw32-linux-x86_64.tar.xz"],
)

mingw_toolchain_repo(
    name = "mingw_x86_64",
    cpu = "x86_64",
    sha256 = "c660219c7f6bd0597ea7984743bae65f82b37d8ec5e13155eb27cf11a4ee50f5",
    strip_prefix = "mingw-w64-gcc-15.2.0-ucrt-posix-seh-x86_64-w64-mingw32-linux-x86_64",
    target = "x86_64-w64-mingw32",
    urls = ["https://github.com/Vibe-Pwners/windows-toolchains/releases/download/v0.0.1/mingw-w64-gcc-15.2.0-ucrt-posix-seh-x86_64-w64-mingw32-linux-x86_64.tar.xz"],
)
